Show coupon code in list of current coupons (coupons#index)

--- a/app/views/coupons/coupons/_coupon.html.erb
+++ b/app/views/coupons/coupons/_coupon.html.erb
@@ -4,6 +4,10 @@
   </td>
 
   <td>
+    <%= coupon_code(coupon) %>
+  </td>
+
+  <td>
     <span class="tag">
       <%= coupon_discount(coupon) %>
     </span>
