--- a/app/views/coupons/coupons/_coupons.html.erb
+++ b/app/views/coupons/coupons/_coupons.html.erb
@@ -17,6 +17,10 @@
         </th>
 
         <th>
+          <%= t('coupons.columns.code') %>
+        </th>
+
+        <th>
           <%= t('coupons.columns.discount') %>
         </th>
 
