--- a/app/views/layouts/coupons/application.html.erb
+++ b/app/views/layouts/coupons/application.html.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div class="page container">
+    <%= render 'layouts/menu_user'  %>
     <%= render 'header' %>
 
     <div class="content">
