--- a/app/views/layouts/coupons/application.html.erb
+++ b/app/views/layouts/coupons/application.html.erb
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <%= page_meta %>
+  <%= javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' %>
 
   <%= stylesheet_link_tag 'coupons' %>
+  <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' %>
 </head>
 <body>
   <%= render 'layouts/menu_user'  %>
