implemented min purchase price and max discount price

--- a/app/views/coupons/coupons/_coupon.html.erb
+++ b/app/views/coupons/coupons/_coupon.html.erb
@@ -13,6 +13,14 @@
     </span>
   </td>
 
+  <td class="text-center">
+    <%= coupon.min_purchase_price %>
+  </td>
+
+  <td class="text-center">
+    <%= coupon.max_discount_price %>
+  </td>
+
   <td>
     <%= coupon_description(coupon) %>
   </td>
