--- a/app/views/coupons/coupons/_coupons.html.erb
+++ b/app/views/coupons/coupons/_coupons.html.erb
@@ -25,6 +25,14 @@
         </th>
 
         <th>
+          <%= t('coupons.columns.min_purchase_price') %>
+        </th>
+
+        <th>
+          <%= t('coupons.columns.max_discount_price') %>
+        </th>
+
+        <th>
           <%= t('coupons.columns.description') %>
         </th>
 
