--- a/app/views/coupons/coupons/_coupon.html.erb
+++ b/app/views/coupons/coupons/_coupon.html.erb
@@ -14,11 +14,11 @@
   </td>
 
   <td class="text-center">
-    <%= coupon.min_purchase_price %>
+    <%= min_purchase_price(coupon) %>
   </td>
 
   <td class="text-center">
-    <%= coupon.max_discount_price %>
+    <%= max_discount_price(coupon) %>
   </td>
 
   <td>
