implemented redemption limit per user

--- a/app/views/coupons/coupons/_coupon.html.erb
+++ b/app/views/coupons/coupons/_coupon.html.erb
@@ -21,6 +21,10 @@
     <%= max_discount_price(coupon) %>
   </td>
 
+  <td class="text-center">
+    <%= redemption_limit_per_user(coupon) %>
+  </td>
+
   <td>
     <%= coupon_description(coupon) %>
   </td>
