--- a/app/views/coupons/coupons/_coupons.html.erb
+++ b/app/views/coupons/coupons/_coupons.html.erb
@@ -33,6 +33,10 @@
         </th>
 
         <th>
+          <%= t('coupons.columns.redemption_limit_per_user') %>
+        </th>
+
+        <th>
           <%= t('coupons.columns.description') %>
         </th>
 
