--- a/app/views/coupons/coupons/_form.html.erb
+++ b/app/views/coupons/coupons/_form.html.erb
@@ -63,6 +63,18 @@
 
   <div class="form-group">
     <div class="form-label">
+      <%= form.label :redemption_limit_per_user %>
+      <%= form.hint  :redemption_limit_per_user %>
+    </div>
+
+    <div class="form-control">
+      <%= form.number_field :redemption_limit_per_user, min: 0 %>
+      <%= form.error_for :redemption_limit_per_user %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="form-label">
       <%= form.label :min_purchase_price %>
       <%= form.hint  :min_purchase_price %>
     </div>
